@@ -15,6 +15,9 @@ Changes in 0.50.1:
     buildlabel and buildbranch.
   * fixed a bug with merging absolute change sets which contain config files
   * redirections to troves w/ older versions already installed didn't work
+  * the pathId generation code has changed.  For cooked troves, the
+    pathId will be the same for any particular version of a path.
+    Though code should not depend on this behavior.
 
 Changes in 0.50.0:
   * Redirections work
